--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -467,6 +467,9 @@ output {
 
 iframe {
   border: 0;
+  padding: 5%;
+  height: 200;
+  width: auto;
 }
 
 summary {
@@ -4956,6 +4959,8 @@ textarea.form-control-lg {
   font-size: 0.75rem;
   background-color: #e9ecef;
   border-radius: 0.25rem;
+  width: 70%;
+  background-color: rgb(32, 30, 32);
 }
 
 .progress-bar {
@@ -4966,7 +4971,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #0d6efd;
+  background-color: #5ed4b7;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
