feat:icon/responsive img

--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -2965,14 +2965,14 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  color: blueviolet;
+  background-color: pink;
+  border-color: red;
 }
 .btn-primary:hover {
-  color: #fff;
-  background-color: #0b5ed7;
-  border-color: #0a58ca;
+  color: blueviolet;
+  background-color: pink;
+  border-color: red;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
@@ -4690,6 +4690,7 @@ textarea.form-control-lg {
 }
 
 .accordion-body {
+  background-color: black;
   padding: 1rem 1.25rem;
 }
 
@@ -6242,8 +6243,9 @@ textarea.form-control-lg {
 .offcanvas-header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 1rem 1rem;
+  background-color: black;
 }
 .offcanvas-header .btn-close {
   padding: 0.5rem 0.5rem;
@@ -6258,6 +6260,7 @@ textarea.form-control-lg {
 }
 
 .offcanvas-body {
+  background-color: black;
   flex-grow: 1;
   padding: 1rem 1rem;
   overflow-y: auto;
