--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,10 @@ div p{
     padding:0px 50px;
 }
 div img{
-    width: 350px;
+    width: 100%;
     height: auto;
-    padding: 0 25px;
+    margin-bottom: 4%;
+}
+.white{
+    background-color: white !important;
 }
