--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -3969,6 +3969,7 @@ textarea.form-control-lg {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  border-radius: 5vh;
   width: 90vw;
   margin-left: 5%;
   padding: 3vh;
