--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@
 body{
     position: relative;
     background-color: rgb(32, 30, 32);
-    color: blueviolet;
+    color: rgb(43, 226, 171);
     margin: 0;
     padding: 0;
 }
@@ -19,4 +19,111 @@ div img{
 }
 .white{
     background-color: white !important;
+}
+/* -------------------------------------------------------------------------- animation  */
+.loading{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform-style: preserve-3d;
+    transform:perspective(500px) rotateX(45deg);
+}
+.loading span{
+    position: absolute;
+    display: block;
+    border: 15px solid rgb(43, 226, 171);
+    border-radius: 50%;
+    box-shadow: 0 10px 0 rgb(43, 226, 171), inset 0 10px 0 rgb(43, 226, 171);
+    animation: animate 4.5s ease-in-out infinite;
+}
+.loading span:nth-child(1){
+    animation-delay: 0s;
+}
+.loading span:nth-child(2){
+    animation-delay: 1.5s;
+}
+.loading span:nth-child(3){
+    animation-delay: 3s;
+}
+@keyframes animate{
+    0%{
+        transform: translateZ(-100px);
+        width: 100%;
+        height: 100%;
+    }
+    /*------------------------- +100px pour monter */
+    25%{
+        transform: translateZ(100px);
+        width: 100%;
+        height: 100%;
+    }
+    50%{
+        transform: translateZ(100px);
+        width: 35%;
+        height: 35%;
+    }
+    75%{
+        transform: translateZ(-100px);
+        width: 35%;
+        height: 35%;
+    }
+    /*--------------------- -100px pour decendre */
+    100%{
+        transform: translateZ(-100px);
+        width: 100%;
+        height: 100%;
+    }
+}
+/* ------------------------------------------------------------------- animation rond colorer */
+.box{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(43, 226, 171);
+    transition: transform 0.4s cubic-bezier(0.23,1.83,0.42,1.19);
+}
+.box p{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 25px;
+    letter-spacing: 3px;
+    font-family: Righteous;
+}
+.circle{
+    width: 320px;
+    height: 320px;
+    border-radius: 50%;
+    border: 3px solid rgb(43, 226, 171);
+    animation: 1s linear infinite alternate boxMagic, 4s linear infinite spinning;
+    padding-top: 400px;
+}
+@keyframes boxMagic{
+    from{
+        box-shadow: 
+        0 0 0 #feac5e,
+        0 0 0 #c779d0,
+        0 0 0 #4bc0c8,
+        0 0 0 #42db75;
+    }
+    to{
+        box-shadow: 
+        0 -15px 0 #feac5e,
+        -15px 0 0 #c779d0,
+        0 15px 0 #4bc0c8,
+        15px 0 0 #42db75;
+    }
+}
+@keyframes spinning{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
 }
