feat:back to top

--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -88,12 +88,13 @@ hr {
   margin: 1rem 0;
   color: inherit;
   background-color: currentColor;
+  width: 75%;
   border: 0;
   opacity: 0.25;
 }
 
 hr:not([size]) {
-  height: 1px;
+  height: 4px;
 }
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
