--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -2976,15 +2976,14 @@ textarea.form-control-lg {
   border-color: red;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
-  color: #fff;
-  background-color: #0b5ed7;
-  border-color: #0a58ca;
-  box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
+  color: blueviolet;
+  background-color: pink;
+  border-color: red;
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #0a58ca;
-  border-color: #0a53be;
+  color: blueviolet;;
+  background-color: pink;
+  border-color: red;
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
@@ -4965,6 +4964,7 @@ textarea.form-control-lg {
   background-color: #e9ecef;
   border-radius: 0.25rem;
   width: 70%;
+  margin-left: 15%;
   background-color: rgb(32, 30, 32);
 }
 
