--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,18 +29,17 @@ a img{
 h3{
     text-align: center;
 }
-
-.row{
-    margin: 0px;
-    padding: 0px;
-    width: 98%;
+li{
+    margin-left: 10%;
 }
 /*----------------------------------------------------------------------------------- class */
 .white{
     background-color: white !important;
 }
-.nav-item{
-    margin-left: 100px;
+.row{
+    margin: 0px;
+    padding: 0px;
+    width: 98%;
 }
 .icons{
     height:75px;
@@ -79,7 +78,6 @@ h3{
     border: 15px solid rgb(43, 226, 171);
     border-radius: 50%;
     box-shadow: 0 10px 0 rgb(43, 226, 171), inset 0 10px 0 rgb(43, 226, 171);
-    animation: animate 4.5s ease-in-out infinite;
 }
 .loading span:nth-child(1){
     animation-delay: 0s;
@@ -118,6 +116,9 @@ h3{
         width: 100%;
         height: 100%;
     }
+}
+.animate{
+    animation: animate 4.5s ease-in-out infinite;
 }
 /* ------------------------------------------------------------------- animation rond colorer */
 .box{
