--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -2966,24 +2966,24 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  color: blueviolet;
-  background-color: pink;
-  border-color: red;
+  color: rgb(43, 226, 171);
+  background-color: rgb(49, 48, 49);
+  border-color: rgb(43, 226, 171);
 }
 .btn-primary:hover {
-  color: blueviolet;
-  background-color: pink;
-  border-color: red;
+  color: rgb(43, 226, 171);
+  background-color: rgb(49, 48, 49);
+  border-color: rgb(43, 226, 171);
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
-  color: blueviolet;
-  background-color: pink;
-  border-color: red;
+  color: rgb(43, 226, 171);
+  background-color: rgb(49, 48, 49);
+  border-color: rgb(43, 226, 171);
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
-  color: blueviolet;;
-  background-color: pink;
-  border-color: red;
+  color: rgb(43, 226, 171);
+  background-color: rgb(49, 48, 49);
+  border-color: rgb(43, 226, 171);
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
@@ -4377,38 +4377,38 @@ textarea.form-control-lg {
 }
 
 .navbar-light .navbar-brand {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgb(43, 226, 171);
 }
 .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgb(43, 226, 171);
 }
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.55);
+  color: rgb(43, 226, 171);
 }
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-  color: rgba(0, 0, 0, 0.7);
+  color: rgb(43, 226, 171);
 }
 .navbar-light .navbar-nav .nav-link.disabled {
-  color: rgba(0, 0, 0, 0.3);
+  color: rgb(43, 226, 171);
 }
 .navbar-light .navbar-nav .show > .nav-link,
 .navbar-light .navbar-nav .nav-link.active {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgb(43, 226, 171);
 }
 .navbar-light .navbar-toggler {
-  color: rgba(0, 0, 0, 0.55);
-  border-color: rgba(0, 0, 0, 0.1);
+  color: rgb(43, 226, 171);
+  border-color: rgb(43, 226, 171);
 }
 .navbar-light .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 .navbar-light .navbar-text {
-  color: rgba(0, 0, 0, 0.55);
+  color: rgb(43, 226, 171);
 }
 .navbar-light .navbar-text a,
 .navbar-light .navbar-text a:hover,
 .navbar-light .navbar-text a:focus {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgb(43, 226, 171);
 }
 
 .navbar-dark .navbar-brand {
@@ -4452,10 +4452,10 @@ textarea.form-control-lg {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: rgb(32, 30, 32);
+  background-color: rgb(49, 48, 49);
   color: rgb(43, 226, 171);
   background-clip: border-box;
-  border: 1px solid var(--bs-pink);
+  border: 1px solid rgb(43, 226, 171);
   border-radius: 0.25rem;
 }
 .card > hr {
@@ -7785,7 +7785,7 @@ textarea.form-control-lg {
 
 .bg-danger {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-danger-rgb), var(--bs-bg-opacity)) !important;
+  background-color: rgb(49, 48, 49) !important;
 }
 
 .bg-light {
